--- a/index.html
+++ b/index.html
@@ -2,24 +2,14 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
-	<link rel="stylesheet" href="./assets/style.css">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 	<link href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap" rel="stylesheet">
 	<meta charset="UTF-8">
-	<script src="./assets/bootstrap/bootstrap.bundle.js"></script>
-	<script src="./assets/maugallery.js"></script>
-	<script src="./assets/scripts.js"></script>
-	<!-- Google tag (gtag.js) -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-VBBWHK2Q89"></script>
-	<script>
-	window.dataLayer = window.dataLayer || [];
-	function gtag(){dataLayer.push(arguments);}
-	gtag('js', new Date());
-
-	gtag('config', 'G-VBBWHK2Q89');
-	</script>
+	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
+	<script src="./assets/maugalleryVanilla.js" defer></script>
+	<script src="./assets/scriptVanilla.js" defer></script>
 </head>
 <body>
 <div class="top-header">
@@ -44,13 +34,15 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100" alt="...">
+				<img fetchpriority="high"   srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-400w.avif 400w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-600w.avif 600w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-800w.avif 800w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1000w.avif 1000w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1200w.avif 1200w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1600w.avif 1600w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-2000w.avif 2000w"
+				sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"
+				src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="...">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100" alt="...">
+				<img fetchpriority="low" src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="...">
 			</div>
 			<div class="carousel-item">
-				<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100" alt="...">
+				<img fetchpriority="low" src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="...">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
@@ -65,7 +57,9 @@
 </div>
 <div id="about">
 	<div class="picture left">
-		<img src="./assets/images/nina.png">
+		<img   srcset="./assets/images/nina-400w.avif 400w, ./assets/images/nina-600w.avif 600w, ./assets/images/nina-800w.avif 800w, ./assets/images/nina-1000w.avif 1000w, ./assets/images/nina-1200w.avif 1200w"
+		sizes="(min-width: 2020px) 560px, (min-width: 1200px) calc(30vw - 40px), (min-width: 660px) calc(46.15vw - 75px), calc(80vw - 51px)"
+		src="./assets/images/nina.webp">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -77,16 +71,61 @@
 <div id="gallery">
 	<h3 class="title">Portfolio</h3>
 	<div class="container py-3">
-		<div class="gallery" style="display: none">
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg"/>
-			<img data-gallery-tag="Mariages" class="gallery-item" src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg"/>
-			<img data-gallery-tag="Portrait" class="gallery-item" src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg"/>
-			<img data-gallery-tag="Concert" class="gallery-item" src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg"/>
-			<img data-gallery-tag="Entreprises" class="gallery-item" src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg"/>
+		<div class="gallery" style="display: block">
+			<img loading="lazy" data-gallery-tag="Concert" class="gallery-item"   srcset="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-400w.avif 400w, ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-600w.avif 600w, ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-800w.avif 800w, ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-1000w.avif 1000w, ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-1200w.avif 1200w, ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-1600w.avif 1600w, ./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash-2000w.avif 2000w"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+			src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.webp"
+			alt=""
+			width="2448"
+			height="3264"/>
+			<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item"   srcset="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-400w.avif 400w, ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-600w.avif 600w, ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-800w.avif 800w, ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-1000w.avif 1000w, ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-1200w.avif 1200w, ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-1600w.avif 1600w, ./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash-2000w.avif 2000w"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+			src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.webp"
+			alt=""
+			width="4000"
+			height="6000"/>
+			<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item"   srcset="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-400w.avif 400w, ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-600w.avif 600w, ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-800w.avif 800w, ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-1000w.avif 1000w, ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-1200w.avif 1200w, ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-1600w.avif 1600w, ./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash-2000w.avif 2000w"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+			src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.webp"
+			alt=""
+			width="4084"
+			height="2764"/>
+			<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item"   srcset="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-400w.avif 400w, ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-600w.avif 600w, ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-800w.avif 800w, ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-1000w.avif 1000w, ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-1200w.avif 1200w, ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-1600w.avif 1600w, ./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash-2000w.avif 2000w"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+			src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.webp"
+			alt=""
+			width="4453"
+			height="3562"/>
+			<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item" srcset="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-400w.avif 400w, ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-600w.avif 600w, ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-800w.avif 800w, ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-1000w.avif 1000w, ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-1200w.avif 1200w, ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-1600w.avif 1600w, ./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash-2000w.avif 2000w"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+			src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.webp"
+			alt=""
+			width="2211"
+			height="3314"/>
+			<img loading="lazy" data-gallery-tag="Mariages" class="gallery-item" srcset="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-400w.avif 400w, ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-600w.avif 600w, ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-800w.avif 800w, ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-1000w.avif 1000w, ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-1200w.avif 1200w, ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-1600w.avif 1600w, ./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash-2000w.avif 2000w"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+			src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.webp"
+			alt=""
+			width="4480"
+			height="6720"/>
+			<img loading="lazy" data-gallery-tag="Portrait" class="gallery-item"   srcset="./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8-unsplash-400w.avif 400w, ./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8-unsplash-600w.avif 600w, ./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8-unsplash-800w.avif 800w, ./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8-unsplash-1000w.avif 1000w, ./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8-unsplash-1200w.avif 1200w, ./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8-unsplash-1600w.avif 1600w, ./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8-unsplash-2000w.avif 2000w"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+			src="./assets/images/gallery/portraits/nino-van-prattenburg-443cl1uR_8-unsplash.webp"
+			alt=""
+			width="4024"
+			height="6048"/>
+			<img loading="lazy" data-gallery-tag="Concert" class="gallery-item"   srcset="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-400w.avif 400w, ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-600w.avif 600w, ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-800w.avif 800w, ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-1000w.avif 1000w, ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-1200w.avif 1200w, ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-1600w.avif 1600w, ./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash-2000w.avif 2000w"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+			src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.webp"
+			alt=""
+			width="5233"
+			height="3489"/>
+			<img loading="lazy" data-gallery-tag="Entreprises" class="gallery-item"   srcset="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-400w.avif 400w, ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-600w.avif 600w, ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-800w.avif 800w, ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-1000w.avif 1000w, ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-1200w.avif 1200w, ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-1600w.avif 1600w, ./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash-2000w.avif 2000w"
+			sizes="(min-width: 1400px) 424px, (min-width: 1200px) 364px, (min-width: 1000px) 304px, (min-width: 780px) 224px, (min-width: 580px) 254px, calc(100vw - 16px)"
+			src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.webp"
+			alt=""
+			width="6000"
+			height="3674"/>
 		</div>
 	</div>
 	<div class="quote">
@@ -158,7 +197,9 @@
 			</form>
 		</div>
 		<div class="picture right">
-			<img src="./assets/images/camera.png">
+			<img   srcset="./assets/images/camera-400w.avif 400w, ./assets/images/camera-600w.avif 600w, ./assets/images/camera-800w.avif 800w, ./assets/images/camera-1000w.avif 1000w, ./assets/images/camera-1200w.avif 1200w, ./assets/images/camera-1600w.avif 1600w, ./assets/images/camera-2000w.avif 2000w"
+			sizes="(min-width: 1600px) 419px, (min-width: 1200px) calc(28.16vw - 26px), (min-width: 1020px) calc(43.75vw - 68px), (min-width: 980px) calc(200vw - 1612px), (min-width: 680px) calc(42.86vw - 63px), (min-width: 640px) calc(-975vw + 6653px), calc(75.94vw - 58px)"
+			src="./assets/images/camera.webp">
 		</div>
 	</div>
 </div>
