--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 	<script src="./assets/bootstrap/bootstrap.bundle.min.js" defer></script>
 	<script src="./assets/maugalleryVanilla.js" defer></script>
 	<script src="./assets/scriptVanilla.js" defer></script>
+	<title>Nina Carducci Photographe</title>
 </head>
 <body>
 <div class="top-header">
