--- a/index.html
+++ b/index.html
@@ -60,7 +60,8 @@
 	<div class="picture left">
 		<img   srcset="./assets/images/nina-400w.avif 400w, ./assets/images/nina-600w.avif 600w, ./assets/images/nina-800w.avif 800w, ./assets/images/nina-1000w.avif 1000w, ./assets/images/nina-1200w.avif 1200w"
 		sizes="(min-width: 2020px) 560px, (min-width: 1200px) calc(30vw - 40px), (min-width: 660px) calc(46.15vw - 75px), calc(80vw - 51px)"
-		src="./assets/images/nina.webp">
+		src="./assets/images/nina.webp"
+		alt="Portrait de Nina Carducci">
 	</div>
 	<div id="about-me">
 		<h3 class="about-me__title">A propos de moi</h3>
@@ -200,7 +201,8 @@
 		<div class="picture right">
 			<img   srcset="./assets/images/camera-400w.avif 400w, ./assets/images/camera-600w.avif 600w, ./assets/images/camera-800w.avif 800w, ./assets/images/camera-1000w.avif 1000w, ./assets/images/camera-1200w.avif 1200w, ./assets/images/camera-1600w.avif 1600w, ./assets/images/camera-2000w.avif 2000w"
 			sizes="(min-width: 1600px) 419px, (min-width: 1200px) calc(28.16vw - 26px), (min-width: 1020px) calc(43.75vw - 68px), (min-width: 980px) calc(200vw - 1612px), (min-width: 680px) calc(42.86vw - 63px), (min-width: 640px) calc(-975vw + 6653px), calc(75.94vw - 58px)"
-			src="./assets/images/camera.webp">
+			src="./assets/images/camera.webp"
+			alt="Appareil photo">
 		</div>
 	</div>
 </div>
