--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<meta name="description" content="Photographe porfessionelle Bordeaux et alentours. Photos pour mariages, concerts, photos d'entreprise et portraits. Shooting photo, retouches et albums photos">
+	<meta name="description" content="Photographe professionelle Bordeaux et alentours. Photos pour mariages, concerts, photos d'entreprise et portraits. Shooting photo, retouches et albums photos">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -12,6 +12,20 @@
 	<script src="./assets/maugalleryVanilla.js" defer></script>
 	<script src="./assets/scriptVanilla.js" defer></script>
 	<title>Nina Carducci - Photographe Bordeaux</title>
+
+	<meta property="og:type" content="website">
+	<meta property="og:site_name" content="Nina Carducci" />
+	<meta property="og:title" content="Nina Carducci - Photographe Bordeaux">
+	<meta property="og:url" content="https://darkgugu.github.io/ninacarducci">
+	<meta property="og:image" content="https://darkgugu.github.io/ninacarducci/assets/images/nina-600w.avif">
+	<meta property="og:description" content="Photographe professionnelle Bordeaux et alentours. Photos pour mariages, concerts, photos d'entreprise et portraits. Shooting photo, retouches et albums photos">
+
+	<meta name="twitter:card" content="summary_large_image" />
+	<meta name="twitter:site" content="@monCompteTwitter" />
+	<meta name="twitter:title" content="MonSiteWeb - Plein d'articles géniaux" />
+	<meta name="twitter:description" content="Découvrez plein d'articles qui vont vous plaire. C'est certain !" />
+	<meta name="twitter:image" content="https://monsiteweb/images/uneimage.jpg" />
+	<meta name="twitter:url" content="http://monsiteweb.fr/ma-page-qui-dechire" />
 </head>
 <body itemscope itemtype="https://schema.org/LocalBusiness">
 <div class="top-header">
