Balise meta twitter cards

--- a/index.html
+++ b/index.html
@@ -21,11 +21,11 @@
 	<meta property="og:description" content="Photographe professionnelle Bordeaux et alentours. Photos pour mariages, concerts, photos d'entreprise et portraits. Shooting photo, retouches et albums photos">
 
 	<meta name="twitter:card" content="summary_large_image" />
-	<meta name="twitter:site" content="@monCompteTwitter" />
-	<meta name="twitter:title" content="MonSiteWeb - Plein d'articles géniaux" />
-	<meta name="twitter:description" content="Découvrez plein d'articles qui vont vous plaire. C'est certain !" />
-	<meta name="twitter:image" content="https://monsiteweb/images/uneimage.jpg" />
-	<meta name="twitter:url" content="http://monsiteweb.fr/ma-page-qui-dechire" />
+	<meta name="twitter:site" content="@ninacarducci" />
+	<meta name="twitter:title" content="Nina Carducci - Photographe Bordeaux" />
+	<meta name="twitter:description" content="Photographe professionnelle Bordeaux et alentours. Photos pour mariages, concerts, photos d'entreprise et portraits. Shooting photo, retouches et albums photos" />
+	<meta name="twitter:image" content="https://darkgugu.github.io/ninacarducci/assets/images/nina.webp" />
+	<meta name="twitter:url" content="https://darkgugu.github.io/ninacarducci/" />
 </head>
 <body itemscope itemtype="https://schema.org/LocalBusiness">
 <div class="top-header">
