--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="description" content="Photographe professionelle Bordeaux et alentours. Photos pour mariages, concerts, photos d'entreprise et portraits. Shooting photo, retouches et albums photos">
