--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Nina Carducci - Photographe Bordeaux</title>
-	<meta name="description" content="Photographe professionelle Bordeaux et alentours. Photos pour mariages, concerts, photos d'entreprise et portraits. Shooting photo, retouches et albums photos">
+	<meta name="description" content="Photographe professionnelle Bordeaux et alentours. Photos pour mariages, concerts, photos d'entreprise et portraits. Shooting photo, retouches et albums photos">
 	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">	<link rel="stylesheet" href="./assets/style.min.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -52,13 +52,13 @@
 			<div class="carousel-item active">
 				<img fetchpriority="high"   srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-400w.avif 400w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-600w.avif 600w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-800w.avif 800w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1000w.avif 1000w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1200w.avif 1200w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1600w.avif 1600w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-2000w.avif 2000w"
 				sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"
-				src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="...">
+				src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="">
 			</div>
 			<div class="carousel-item">
-				<img fetchpriority="low" src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="...">
+				<img fetchpriority="low" src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.webp" class="d-block w-100" alt="">
 			</div>
 			<div class="carousel-item">
-				<img fetchpriority="low" src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="...">
+				<img fetchpriority="low" src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.webp" class="d-block w-100" alt="">
 			</div>
 		</div>
 		<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
