--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 	<meta property="og:site_name" content="Nina Carducci" />
 	<meta property="og:title" content="Nina Carducci - Photographe Bordeaux">
 	<meta property="og:url" content="https://darkgugu.github.io/ninacarducci">
-	<meta property="og:image" content="https://darkgugu.github.io/ninacarducci/assets/images/nina-600w.avif">
+	<meta property="og:image" content="https://darkgugu.github.io/ninacarducci/assets/images/nina.webp">
 	<meta property="og:description" content="Photographe professionnelle Bordeaux et alentours. Photos pour mariages, concerts, photos d'entreprise et portraits. Shooting photo, retouches et albums photos">
 
 	<meta name="twitter:card" content="summary_large_image" />
@@ -29,7 +29,7 @@
 </head>
 <body itemscope itemtype="https://schema.org/LocalBusiness">
 <div class="top-header">
-	<h3 class="name" itemprop="name">Nina Carducci</h3>
+	<h1 class="name" itemprop="name">Nina Carducci</h1>
 	<div class="nav">   
 		<ul>
 			<li><a href="#about">À propos</a></li>
@@ -50,7 +50,7 @@
 		</div>
 		<div class="carousel-inner">
 			<div class="carousel-item active">
-				<img fetchpriority="high"   srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-400w.avif 400w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-600w.avif 600w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-800w.avif 800w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1000w.avif 1000w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1200w.avif 1200w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1600w.avif 1600w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-2000w.avif 2000w"
+				<img fetchpriority="high" srcset="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-400w.avif 400w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-600w.avif 600w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-800w.avif 800w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1000w.avif 1000w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1200w.avif 1200w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-1600w.avif 1600w, ./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash-2000w.avif 2000w"
 				sizes="(min-width: 2040px) 1920px, calc(94.19vw + 17px)"
 				src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.webp" class="d-block w-100" alt="">
 			</div>
@@ -80,8 +80,8 @@
 		itemprop="image">
 	</div>
 	<div id="about-me">
-		<h3 class="about-me__title">A propos de moi</h3>
-		<h4 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h4>
+		<h2 class="about-me__title">A propos de moi</h2>
+		<h3 class="about-me__introduction">Devenir photographe était pour moi une évidence. Comme si j’y étais prédestiné. Saisir un moment, une émotion, une situation, un endroit, une lumière et les rendre immortels, voilà ce qui me fait vibrer.</h3>
 		<p>Nous passons notre vie à chercher le bonheur, et lorsque nous y touchons, nous n’avons qu’une envie : le figer au travers de photographies pour le savourer avec les personnes qui sont importantes à nos yeux, ou le partager au plus grand nombre.
 			C’est ce que je vous propose : saisir ces merveilleux moments au travers de mon regard, mon approche, ma technique. Rendre ces moments immortels, afin que vous puissiez y puiser de l’amour, du bonheur, de la tendresse et de lumière à chaque fois que vous poserez les yeux sur vos photos.</p>
 	</div>
@@ -156,7 +156,7 @@
 	</div>
 </div>
 <div id="services">
-	<h3 class="title">Mes services</h3>
+	<h2 class="title">Mes services</h2>
 	<div class="container">
 		<div class="service">
 			<div class="service__description">
@@ -202,7 +202,7 @@
 <div id="contact">
 	<div class="container">
 		<div class="form-container">
-			<h3>Une question ? Une demande de devis ?</h3>
+			<h2>Une question ? Une demande de devis ?</h2>
 			<p> N’hésitez pas à m’écrire ! Je vous répondrais en moins de 24 heures</p>
 			<form action="" method="post">
 				<label for="nom">Nom</label>
@@ -222,7 +222,7 @@
 		</div>
 	</div>
 </div>
-<!-- Google Rish Snippets -->
+<!-- Google Rich Snippets -->
 <div style="display: none;">
 	<div itemprop="address" itemscope itemtype="https://schema.org/PostalAddress">
 		<p itemprop=”streetAddress”>68 avenue Alsace-Lorraine</p>
